--- a/index.html
+++ b/index.html
@@ -8,18 +8,232 @@
     <title>Neha's Portfolio</title>
 </head>
 <body>
+  
     <nav>
         <h1>Nebula's Code</h1>
-        <h4>Hi! My name is Neha. I'm passionate about learning new things!</h4>
+        <!--<h4>Hi! My name is Neha. I'm passionate about learning new things!</h4>-->
         <ul class="navigation">
-          <li><a href="https://update.nebulascode.com/" class="nav-link">About</a></li>
-          <li><a href="https://dev.to/nehamaity" class="nav-link">Skills</a></li>
-          <li><a href="https://github.com/nehamaity/" class="nav-link">Projects</a></li>
-          <li><a href="https://twitter.com/NehaKatharina" class="nav-link">Contact</a></li>
+          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#skills" class="nav-link">Skills</a></li>
+          <li><a href="#projects" class="nav-link">Projects</a></li>
+          <li><a href="#contact" class="nav-link">Contact</a></li>
         </ul>
+        <button class="burger-menu" id="burger-menu">
+          <ion-icon class="bars" name="menu-outline"></ion-icon>
+        </button>
         
   </nav>
+  <section class="hero" id="about">
+ 
+   <img
+      src="profile.JPG"
+      alt="neha-m"
+      loading="lazy"
+      class="hero-img"
+    />
+    <!--<div class="bio animate__animated animate__shakeX">
+      <h2 class="bio-title">About Me</h2>
+      <p class="bio-text">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sed
+        dolorem fugit sapiente porro veniam pariatur dolore nostrum delectus
+        inventore tempore minus nemo, iste ullam illo laboriosam maiores
+        repudiandae quos!
+      </p>
+    </div>-->
+  </section>
+  <section class="more-about">
+    <h2>Neha</h2>
+    <h3>Software Engineer</h3>
+    <p>
+      I'm a software engineer who is passionate about learning new things.
+      I currently work as a Software Engineer with a goal to contribute to 
+      technologies that deliver a positive impact to the world. 
+      I'm also passionate about teaching and am looking to inspire when I get
+      a chance. I enjoy rock-climbing and hiking when I want to get outside. 
+    </p>
+    <p>
+      I have a passion for helping students and inspiring them to pursue careers 
+      in tech and STEM.
+
+    </p>
+    <p>
+      I'm currently looking for my next software adventure, feel free to reach out!
+    </p>
+  </section>
+  <section class="skills" id="skills">
+    <h2 class="skill-header">My Top Skills</h2>
+
+    <div class="skills-wrapper">
+      <div class="first-set animate__animated animate__pulse">
+        <img
+          src="java.png"
+          alt="Java logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="python.png"
+          alt="Python logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="cpp-logo.png"
+          alt="C++ logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+
+      <div class="second-set animate__animated animate__pulse">
+        <img
+          src="HTML5_badge.png"
+          alt="HTML5 logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="jupyter.png"
+          alt="Jupyter logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+        <img
+          src="git-icon.png"
+          alt="Git logo"
+          loading="lazy"
+          class="icon icon-card"
+        />
+      </div>
+    </div>
+  </section>
+  <section class="projects" id="projects">
+    <h2 class="projects-title">Some of my Recent Projects</h2>
+    <div class="projects-container">
+      <div class="project-container project-card">
+        <img
+          src=""
+          alt="restaurant-website"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Breakfast Kitchen</h3>
+        <p class="project-details">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+          ratione vel inventore labore commodi modi quos culpa aut saepe!
+          Alias!
+        </p>
+        <a href="#" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="project-container project-card">
+        <img
+          src=""
+          alt="population-data-analysis"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Population Tracking</h3>
+        <p class="project-details">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+          ratione vel inventore labore commodi modi quos culpa aut saepe!
+          Alias!
+        </p>
+        <a href="#" target="_blank" class="project-link">Check it Out</a>
+      </div>
+      <div class="project-container project-card">
+        <img
+          src=""
+          alt="travel"
+          loading="lazy"
+          class="project-pic"
+        />
+        <h3 class="project-title">Travel Planner</h3>
+        <p class="project-details">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
+          ratione vel inventore labore commodi modi quos culpa aut saepe!
+          Alias!
+        </p>
+        <a href="#" target="_blank" class="project-link">Check it Out</a>
+      </div>
+    </div>
+  </section>
+  <section class="contact" id="contact">
+    <h2>Get In Touch With Me</h2>
+    <div class="contact-form-container">
+      <div class="contact-form">
+        <form action="https://formspree.io/f/xnqrqvaw" method="POST">
+          <div class="form-control">
+            <label for="name">Name</label>
+            <input
+              type="text"
+              id="name"
+              name="sender-name"
+              placeholder="Enter Your Name"
+              class="input-field"
+              required
+            />
+          </div>
+          <div class="form-control">
+            <label for="email">Email</label>
+            <input
+              type="email"
+              id="email"
+              name="sender-email"
+              placeholder="Enter Your Email"
+              class="input-field"
+              required
+            />
+          </div>
+          <div class="form-control">
+            <label for="message">Message</label>
+            <textarea
+              id="message"
+              cols="60"
+              rows="10"
+              placeholder="Enter Your Message"
+              name="message"
+              class="input-field"
+              required
+            ></textarea>
+          </div>
+          <input
+            type="submit"
+            value="Submit"
+            id="submit-btn"
+            class="submit-btn"
+          />
+        </form>
+      </div>
+    </div>
+  </section>
+ <!-- <i class="scroll-up" id="scroll-up"
+  ><img
+    src="icons8-scroll-up-30.png"
+    class="socicon up-arrow"
+    alt="scroll-up"
+/></i>-->
+<!--<a class="scroll-up" target="_blank" href="https://icons8.com/icon/101309/scroll-up">Scroll Up</a> icon by <a class="scroll-up" target="_blank" href="https://icons8.com">Icons8</a>-->
+
+  <footer>
+    <p class="copy">&copy; Copyright 2022</p>
+    <p class="copy">
+      Built with &#x2661; by
+      <a href="https://twitter.com/NehaKatharina" target="_blank"
+        >Neha Maity</a>
+    </p>
+</footer>
+<script src="script.js"></script>
+<script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
+
   
+  <!--
   <div class="first">
     <p><a href="https://community.codenewbie.org/nehamaity/reflecting-on-my-cnc2022-learn-in-public-journey-3a51">Reflecting on my CNC2022 Learn in Public journey</a><br />
     <small>I wanted to sign up for this challenge to gain some structure and post 
@@ -35,6 +249,6 @@
         a job after graduation, there are some things I wish I did differently.</small></p>
   </div>
 
-    <h5>Made by Neha :)</h5>
+    <h5>Made by Neha :)</h5>-->
 </body>
 </html>
