Added sections to portfolio site

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!--Portfolio site created based on: https://www.freecodecamp.org/news/how-to-build-a-developer-portfolio-website-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,18 +44,20 @@
   </section>
   <section class="more-about">
     <h2>Neha</h2>
-    <h3>Software Engineer</h3>
+    <h3><a href="https://update.nebulascode.com/" target="_blank" >Software Engineer</a></h3>
+
     <p>
       I'm a software engineer who is passionate about learning new things.
       I currently work as a Software Engineer with a goal to contribute to 
       technologies that deliver a positive impact to the world. 
-      I'm also passionate about teaching and am looking to inspire when I get
-      a chance. I enjoy rock-climbing and hiking when I want to get outside. 
+      I also have a passion for helping students and inspiring them to pursue careers 
+      in tech and STEM. I enjoy rock climbing and hiking when I want to get outside. 
     </p>
-    <p>
-      I have a passion for helping students and inspiring them to pursue careers 
-      in tech and STEM.
-
+    <p>I write articles on online, check them out 
+      <a href="https://community.codenewbie.org/nehamaity" target="_blank" >here!</a>
+      </p>
+      <p>My experience is primarily
+      in back-end development and I am currently learning front-end in my own time.
     </p>
     <p>
       I'm currently looking for my next software adventure, feel free to reach out!
@@ -119,11 +122,9 @@
         />
         <h3 class="project-title">Breakfast Kitchen</h3>
         <p class="project-details">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-          ratione vel inventore labore commodi modi quos culpa aut saepe!
-          Alias!
+          Mockup of restaurant website.
         </p>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://regal-pixie-4f35ea.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
         <img
@@ -134,13 +135,11 @@
         />
         <h3 class="project-title">Population Tracking</h3>
         <p class="project-details">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas
-          ratione vel inventore labore commodi modi quos culpa aut saepe!
-          Alias!
+          Population data analysis
         </p>
-        <a href="#" target="_blank" class="project-link">Check it Out</a>
+        <a href="https://github.com/nehamaity/population-analysis" target="_blank" class="project-link">Check it Out</a>
       </div>
-      <div class="project-container project-card">
+      <!--<div class="project-container project-card">
         <img
           src=""
           alt="travel"
@@ -154,7 +153,7 @@
           Alias!
         </p>
         <a href="#" target="_blank" class="project-link">Check it Out</a>
-      </div>
+      </div>-->
     </div>
   </section>
   <section class="contact" id="contact">
