--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
       I also have a passion for helping students and inspiring them to pursue careers 
       in tech and STEM. I enjoy rock climbing and hiking when I want to get outside. 
     </p>
-    <p>I write articles on online, check them out 
+    <p>I write articles online, check them out 
       <a href="https://community.codenewbie.org/nehamaity" target="_blank" >here</a>!
-      </p>
-      <p>My experience is primarily
-      in back-end development and I am currently learning front-end in my 
-      <a href="https://update.nebulascode.com/" target="_blank" >own time</a>.
+    </p>
+    <p>My experience is primarily
+    in back-end development and I am currently learning front-end in my 
+    <a href="https://update.nebulascode.com/" target="_blank" >own time</a>.
     </p>
     <p>
       I'm currently looking for my next software adventure, feel free to reach out!
