Edited project description text

--- a/index.html
+++ b/index.html
@@ -115,28 +115,28 @@
     <h2 class="projects-title">Some of my Recent Projects</h2>
     <div class="projects-container">
       <div class="project-container project-card">
-        <img
+        <!--<img
           src=""
           alt="restaurant-website"
           loading="lazy"
           class="project-pic"
-        />
+        />-->
         <h3 class="project-title">Breakfast Kitchen</h3>
         <p class="project-details">
-          Mockup of restaurant website.
+          Mockup of restaurant website
         </p>
         <a href="https://regal-pixie-4f35ea.netlify.app/" target="_blank" class="project-link">Check it Out</a>
       </div>
       <div class="project-container project-card">
-        <img
+        <!--<img
           src=""
           alt="population-data-analysis"
           loading="lazy"
           class="project-pic"
-        />
+        />-->
         <h3 class="project-title">Population Tracking</h3>
         <p class="project-details">
-          Population data analysis
+          Analysis of population dataset
         </p>
         <a href="https://github.com/nehamaity/population-analysis" target="_blank" class="project-link">Check it Out</a>
       </div>
