--- a/index.html
+++ b/index.html
@@ -221,6 +221,11 @@
       <a href="https://twitter.com/NehaKatharina" target="_blank"
         >Neha Maity</a>
     </p>
+    <p>Based on
+     <a href="https://www.freecodecamp.org/news/how-to-build-a-developer-portfolio-website">
+       tutorial
+     </a>
+    </p>
 </footer>
 <script src="script.js"></script>
 <script
